@@ -11,7 +11,7 @@ Imports: ca, clipr, data.table, dplyr (>= 0.4.3), ggplot2, gofastr,
         grid, gridBase, gridExtra, igraph, quanteda, slam, SnowballC,
         stringi, textshape, tidyr, tm, utils, wordcloud
 Suggests: knitr, rmarkdown, qdapRegex, rgl, testthat
-Date: 2016-04-04
+Date: 2016-04-08
 License: GPL-2
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
